--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nursin</title>
-    <link rel="stylesheet" href="C:\Users\MSI-1\OneDrive\Desktop\hospital website\hospital website\style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.min.css">
 </head>
 <body>
