--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
 -->
 
 
-    <script src="D:/Doctor/hospital website/fontawesome-free-5.15.3-web/all.js"></script>
-    <script src="D:/Doctor/hospital website/fontawesome-free-5.15.3-web/all.min.js"></script>
-    <script src="D:/Doctor/hospital website/fontawesome-free-5.15.3-web/brands.js"></script>
+    <script src="fontawesome-free-5.15.3-web/all.js"></script>
+    <script src="fontawesome-free-5.15.3-web/all.min.js"></script>
+    <script src="fontawesome-free-5.15.3-web/brands.js"></script>
 
 
 </body>
