--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
 
     <div class="main-choseus">
-        <img src= "C:\Users\MSI-1\OneDrive\Desktop\hospital website\hospital website\images\11.jpg" alt="">
+        <img src= "images\11.jpg" alt="">
     
     </div>
 
