--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <div class="second-menu">
     <nav class="navbar">
         <a href="#">home</a>
-        <a href="#">about</a>
+        <a
+      href="javascript:void(window.open('https://form.jotform.com/231295016720449','blank','scrollbars=yes,toolbar=no,width=700,height=500'))">Online Doctor Appointment Form</a>
         <a href="#">blog</a>
         <a href="#">gallery</a>
         <a href="#">contact</a>
