--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <nav class="navbar">
         <a href="#">home</a>
         <a
-      href="javascript:void(window.open('https://form.jotform.com/231295016720449','blank','scrollbars=yes,toolbar=no,width=100%,height=100%'))">Online Doctor Appointment Form</a>
+      href="javascript:void(window.open('https://form.jotform.com/231295016720449','blank','scrollbars=yes,toolbar=no,width=100%,height=100%'))">Appointments</a>
         <a href="#">blog</a>
         <a href="#">gallery</a>
         <a href="#">contact</a>
