--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6" style="padding-right: 0px;">
             <img class="d-block w-100" src="images/1.jpg" alt="First slide">
           </div>
           <div class="col-md-6">
@@ -221,7 +221,7 @@
       </div>
       <div class="carousel-item">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6" style="padding-right: 0px;">
             <img class="d-block w-100" src="images/2.jpg" alt="Second slide">
           </div>
           <div class="col-md-6">
@@ -234,7 +234,7 @@
       </div>
       <div class="carousel-item">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6" style="padding-right: 0px;">
             <img class="d-block w-100" src="images/3.jpg" alt="Third slide">
           </div>
           <div class="col-md-6">
