--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body class="shadow">
- <div class="main-header style="background-color: #37c3a8">
+ <div class="main-header" style="background-color: #37C3A8">
 <a href="#" id="logo"><img src="images/NursIn logo.png" alt="" style="border-radius: 2em
 ;"></a>
 
