--- a/Footer/GuidelinesForVisitors.html
+++ b/Footer/GuidelinesForVisitors.html
@@ -1,12 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Hospital Visitor Guidelines</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 30px;
+      padding: 30px;
+      background-color: #f5f5f5;
+      border-radius: 40px;
+      border: 5px solid;
+    }
+
+    h1 {
+      color: lightgreen;
+      padding: 10px;
+      margin-bottom: 40px;
+      text-align: center;
+    }
+
+    .guideline-container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 40px;
+    }
+
+    .guideline {
+      background-color: #ffffff;
+      border-radius: 10px;
+      padding: 40px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      color: #fd0000;
+      font-size: 18px;
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+
+    p {
+      color: #000000;
+      font-size: 14px;
+      line-height: 1.5;
+      margin-bottom: 0;
+    }
+  </style>
 </head>
 <body>
-    <h1>Guidelines For Visitors</h1>
-</body>
-</html>
+  <h1>Hospital Visitor Guidelines</h1>
+
+  <div class="guideline-container">
+    <div class="guideline">
+      <h2>1. Check the hospital's visiting hours and policies:</h2>
+      <p>Before visiting, find out the hospital's visiting hours and any specific guidelines or restrictions they have in place. Some hospitals may have limited visiting hours or certain areas that are off-limits to visitors.</p>
+    </div>
+
+    <div class="guideline">
+      <h2>2. Wash your hands:</h2>
+      <p>Upon entering the hospital, thoroughly wash your hands with soap and water or use hand sanitizer if it's available. This helps reduce the spread of germs and protects patients who may have weakened immune systems.</p>
+    </div>
+
+    <div class="guideline">
+      <h2>3. Follow dress code requirements:</h2>
+      <p>Some hospitals have specific dress code requirements for visitors, such as wearing clean clothes, avoiding revealing or offensive attire, and wearing closed-toe shoes. Adhering to these guidelines helps maintain a clean and professional environment.</p>
+    </div>
+
+    <div class="guideline">
+      <h2>4. Respect privacy and confidentiality:</h2>
+      <p>Hospitals prioritize patient privacy and confidentiality. Avoid discussing confidential information or medical details in public areas. If you're visiting a patient's room, be mindful of their need for privacy and speak softly.</p>
+    </div>
+
+    <div class="guideline">
+      <h2>5. Limit the number of visitors:</h2>
+      <p>To prevent overcrowding and maintain a calm environment, hospitals often have restrictions on the number of visitors allowed per patient. Follow these guidelines and consider coordinating visits with other family members or friends to ensure everyone gets a chance to see the patient.</p>
+    </div>
+
+    <div class="guideline">
+      <h2>6. Be mindful of infection control measures:</h2>
+      <p>Hospitals may have infection control measures in place to prevent the spread of illnesses. Follow any instructions provided, such as wearing masks, gloves
