--- a/Footer/Patient&AttendantResponsibilities.html
+++ b/Footer/Patient&AttendantResponsibilities.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Patient & Attendant Responsibilities</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      padding: 30px;
+      background-color: white;
+      border-radius: 40px;
+      border: 5px solid;
+    }
+
+    h1 {
+      color: lightgreen;
+      text-align: center;
+    }
+
+    .responsibilities-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: space-between;
+    }
+
+    .responsibility {
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      padding: 20px;
+      width: calc(33.33% - 20px);
+      box-sizing: border-box;
+    }
+
+    h2 {
+      color: #4d0dfe;
+      font-size: 18px;
+      margin-top: 0;
+    }
+
+    p {
+      color: #ff0000;
+      font-size: 14px;
+      line-height: 1.5;
+      margin-bottom: 0;
+    }
+  </style>
 </head>
 <body>
-    <h1>Patient & Attendant Responsibilities</h1>
-</body>
-</html>
+  <h1>Patient & Attendant Responsibilities</h1>
+
+  <div class="responsibilities-container">
+    <div class="responsibility">
+      <h2>1. Provide Accurate Information:</h2>
+      <p>Patients and attendants should provide accurate and complete information about the patient's medical history, current symptoms, allergies, medications, and any other relevant details. This helps healthcare professionals make informed decisions about the patient's care.</p>
+    </div>
+
+    <div class="responsibility">
+      <h2>2. Follow Treatment Plans:</h2>
+      <p>Patients and attendants should follow the prescribed treatment plan, including taking medications as directed, undergoing recommended therapies or procedures, and adhering to dietary or lifestyle changes. It is important to communicate any difficulties or concerns regarding the treatment plan to the healthcare team.</p>
+    </div>
+
+    <div class="responsibility">
+      <h2>3. Respect Hospital Policies and Staff:</h2>
+      <p>Patients and attendants should respect the policies and regulations of the hospital, including visiting hours, noise restrictions, and infection control measures. It is important to treat the hospital staff and other patients with courtesy and respect.</p>
+    </div>
+
+    <div class="responsibility">
+      <h2>4. Communicate Openly:</h2>
+      <p>Patients and attendants should openly communicate with the healthcare team, expressing any concerns, questions, or changes in the patient's condition. Effective communication helps in providing appropriate care and addressing any issues that may arise during the hospital stay.</p>
+    </div>
+
+    <div class="responsibility">
+      <h2>5. Follow Instructions and Safety Precautions:</h2>
+      <p>Patients and attendants should follow the instructions provided by the healthcare team, including medication schedules, rehabilitation exercises, or post-operative care. It is important to adhere to safety precautions, such as using hand hygiene, wearing appropriate protective equipment, and following discharge instructions.</p>
+    </div>
+
+    <div class="responsibility">
+      <h2>6. Engage in Self-Care:</h2>
+      <p>Patients and attendants should actively participate in self-care practices, such as personal hygiene, mobilization, and following a balanced diet. Engaging in self-care helps promote recovery and maintain overall well-being.</p>
+    </div>
+    <div class="responsibility">
+      <h2>7. Pay Financial Obligations:</h2>
+      <p>Patients and attendants are responsible for fulfilling their financial obligations related to the hospital services. This includes understanding and paying hospital bills, co-pays, deductibles, or any other financial agreements as per the hospital's policies.</p>
+
