--- a/Footer/Orthopaedics.html
+++ b/Footer/Orthopaedics.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Orthopedics Information</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Orthopaedics</h1>
-</body>
-</html>
+  <header>
+    <h1>Orthopedics Information</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#overview">Overview</a></li>
+      <li><a href="#conditions">Common Conditions</a></li>
+      <li><a href="#treatments">Treatments</a></li>
+      <li><a href="#resources">Resources</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section id="overview">
+      <h2>Overview</h2>
+      <p>Orthopedics is a specialized branch of medicine that focuses on the prevention, diagnosis, and treatment of disorders related to the musculoskeletal system. This system includes bones, joints, ligaments, tendons, muscles, and nerves that work together to support the body and enable movement.</p>
+      <p>Orthopedic specialists, also known as orthopedic surgeons or orthopedists, are highly trained medical professionals who specialize in the management of musculoskeletal conditions. They employ various diagnostic techniques, including physical examinations, medical imaging, and laboratory tests, to assess patients and develop appropriate treatment plans.</p>
+      <p>Orthopedics encompasses a wide range of conditions, injuries, and diseases, and treatment approaches can vary from conservative measures such as medication and physical therapy to surgical interventions. The ultimate goal of orthopedic care is to relieve pain, restore function, and improve the quality of life for patients.</p>
+    </section>
+
+    <section id="conditions">
+      <h2>Common Conditions</h2>
+      <p>Orthopedic specialists diagnose and treat numerous conditions affecting the musculoskeletal system. Some of the most common orthopedic conditions include:</p>
+      <ul>
+        <li>Arthritis: A degenerative condition that causes joint inflammation and pain.</li>
+        <li>Fractures: Broken bones resulting from trauma, falls, or sports injuries.</li>
+        <li>Back Pain: Can be caused by various factors, including muscle strain, herniated discs, or spinal conditions.</li>
+        <li>Osteoporosis: A condition characterized by the loss of bone density and strength, making bones more susceptible to fractures.</li>
+        <li>Scoliosis: An abnormal sideways curvature of the spine.</li>
+        <li>Herniated Disc: When the gel-like material within a spinal disc protrudes or leaks out, putting pressure on nearby nerves.</li>
+        <li>Rotator Cuff Tears: Tears in the tendons and muscles that stabilize the shoulder joint.</li>
+        <li>Carpal Tunnel Syndrome: Compression of the median nerve in the wrist, leading to hand and finger pain, numbness, and weakness.</li>
+      </ul>
+    </section>
+
+    <section id="treatments">
+      <h2>Treatments</h2>
+      <p>Orthopedic treatments can range from non-surgical interventions to complex surgical procedures, depending on the condition and its severity. Treatment plans are highly individualized and developed based on a thorough assessment of the patient's condition, medical history, lifestyle factors, and treatment goals.</p>
+      <p>Some common treatment options include:</p>
+      <ul>
+        <li>Medications: Nonsteroidal anti-inflammatory drugs (NSAIDs), pain relievers, and corticosteroids may be prescribed to manage pain, reduce inflammation, and improve mobility.</li>
+        <li>Physical Therapy: Therapeutic exercises, stretching, and other physical modalities can help strengthen muscles, improve joint flexibility, and enhance overall function.</li>
+        <li>Injections: Corticosteroid injections, hyaluronic acid injections, and platelet-rich plasma (PRP) injections may be used to alleviate pain and promote healing in specific joints or soft tissues.</li>
+        <li>Minimally Invasive Procedures: Techniques such as arthroscopy allow orthopedic surgeons to visualize, diagnose, and treat joint conditions using small incisions and specialized instruments.</li>
+        <li>Joint Replacement: Severe joint damage or advanced arthritis may require joint replacement surgery, where the damaged joint is replaced with a prosthetic implant made of metal, plastic, or ceramic.</li>
+        <li>Spinal Surgery: Surgical interventions may be necessary to address conditions affecting the spine, such as herniated discs, spinal stenosis, or spinal deformities.</li>
+        <li>Fracture Repair: Broken bones may require realignment and stabilization through non-surgical methods like casting or surgical interventions involving the use of screws, plates, or rods.</li>
+        </ul>
+        </section>
+        <section id="resources">
+            <h2>Resources</h2>
+            <p>For patients seeking more information on orthopedics, there are a variety of resources available to further explore the subject:</p>
+            <ul>
+              <li>Books and Publications: Numerous books and publications cover various orthopedic topics, including condition-specific guides, surgical techniques, and patient self-help books.</li>
+              <li>Websites and Online Resources: Reputable websites and online platforms offer extensive information on orthopedic conditions, treatments, and patient resources. These websites often provide articles, videos, interactive tools, and patient testimonials.</li>
+              <li>Support Groups and Forums: Online support groups and forums provide opportunities for individuals dealing with orthopedic conditions to connect, share experiences, seek advice, and offer support.</li>
+              <li>Orthopedic Clinics and Hospitals: Orthopedic clinics and hospitals have dedicated websites that provide information about their services, the expertise of orthopedic specialists, and patient resources. They may also offer educational materials, brochures, and pamphlets on orthopedic conditions and treatments.</li>
+              <li>Referrals and Second Opinions: General practitioners, family physicians, or other specialists can provide referrals to reputable orthopedic specialists. Seeking a second opinion can be beneficial, particularly for complex procedures, to ensure an accurate diagnosis and explore alternative treatment options.</li>
+            </ul>
+          </section>
+        </main>
+        <footer>
+          <p>&copy; 2023 NursIn</p>
+        </footer>
+      </body>
+      </html>          
