--- a/index.html
+++ b/index.html
@@ -280,26 +280,26 @@
 <div class="main-gallery">
 
 <div class="inner-gallery">
-    <img src="images/gallery1.png" alt="">
+    <img src="https://source.unsplash.com/400x400/?'medical'" alt="">
 </div>
 <div class="inner-gallery">
-    <img src="images/gallery2.png" alt="">
-</div>
-
-<div class="inner-gallery">
-    <img src="images/gallery3.png" alt="">
+    <img src="https://source.unsplash.com/400x400/?'hospital'" alt="">
 </div>
 
 <div class="inner-gallery">
-    <img src="images/gallery4.png" alt="">
+    <img src="https://source.unsplash.com/400x400/?'Patient'" alt="">
 </div>
 
 <div class="inner-gallery">
-    <img src="images/gallery5.png" alt="">
+    <img src="https://source.unsplash.com/400x400/?'medicine'" alt="">
 </div>
 
 <div class="inner-gallery">
-    <img src="images/gallery6.png" alt="">
+    <img src="https://source.unsplash.com/400x400/?'doctors'" alt="">
+</div>
+
+<div class="inner-gallery">
+    <img src="https://source.unsplash.com/2000x400/?'disease'" alt="">
 </div>
 
 </div>
