--- a/Footer/Neurology.html
+++ b/Footer/Neurology.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Neurology Information</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Neurology</h1>
-</body>
-</html>
+  <header>
+    <h1>Neurology Information</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#overview">Overview</a></li>
+      <li><a href="#conditions">Common Conditions</a></li>
+      <li><a href="#treatments">Treatments</a></li>
+      <li><a href="#resources">Resources</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section id="overview">
+      <h2>Overview</h2>
+      <p>Neurology is a medical specialty that focuses on the diagnosis, treatment, and management of conditions affecting the nervous system. The nervous system is a complex network that includes the brain, spinal cord, and peripheral nerves, and it controls and coordinates various bodily functions.</p>
+      <p>Neurologists are specialized physicians who have extensive knowledge and training in the field of neurology. They assess and treat a wide range of neurological disorders, including conditions related to the brain, spinal cord, nerves, and muscles.</p>
+      <p>Neurological conditions can vary greatly in their nature and severity, ranging from chronic conditions like epilepsy and multiple sclerosis to acute conditions like stroke and traumatic brain injury. The field of neurology is constantly advancing, with ongoing research and new treatments being developed to improve patient outcomes.</p>
+    </section>
+
+    <section id="conditions">
+      <h2>Common Conditions</h2>
+      <p>Neurologists diagnose and treat a wide range of neurological conditions. Some of the most common conditions seen in neurology include:</p>
+      <ul>
+        <li>Epilepsy: A neurological disorder characterized by recurrent seizures.</li>
+        <li>Migraine: Severe headaches often accompanied by other symptoms like nausea, sensitivity to light, and sound.</li>
+        <li>Stroke: A sudden interruption of blood flow to the brain, leading to brain damage and neurological deficits.</li>
+        <li>Multiple Sclerosis (MS): A chronic autoimmune disease that affects the central nervous system, leading to inflammation and damage to the myelin sheath.</li>
+        <li>Parkinson's Disease: A progressive neurological disorder that affects movement, causing tremors, stiffness, and balance problems.</li>
+        <li>Alzheimer's Disease: A degenerative brain disorder characterized by memory loss, cognitive decline, and behavioral changes.</li>
+        <li>Peripheral Neuropathy: Damage to the peripheral nerves, leading to symptoms such as numbness, tingling, and weakness in the limbs.</li>
+        <li>ALS (Amyotrophic Lateral Sclerosis): A progressive neurodegenerative disease that affects nerve cells in the brain and spinal cord, leading to muscle weakness and eventual paralysis.</li>
+      </ul>
+    </section>
+
+    <section id="treatments">
+      <h2>Treatments</h2>
+      <p>The treatment of neurological conditions depends on the specific condition and its underlying causes. Neurologists employ various treatment approaches to manage and improve the symptoms and quality of life for their patients. Some common treatment options in neurology include:</p>
+      <ul>
+        <li>Medications: Neurologists may prescribe medications to control symptoms, manage pain, prevent disease progression, or address underlying conditions.</li>
+        <li>Physical Therapy: Physical therapy can help improve mobility, strength, and coordination in individuals with neurological conditions.</li>
+        <li>Speech Therapy: Speech therapy may be recommended to improve communication and swallowing difficulties in patients with neurological disorders.</li>
+        <li>Occupational Therapy: Occupational therapy focuses on helping patients regain and maintain independence in daily activities.</li>
+        <li>Surgical Interventions: In some cases, neurosurgical procedures may be necessary to treat specific neurological conditions or alleviate symptoms.</li>
+        <li>Lifestyle Modifications: Lifestyle changes, such as diet modifications, exercise, stress management, and sleep hygiene, can play a role in managing certain neurological conditions.</li>
+        </ul>
+        </section>
+        <section id="resources">
+            <h2>Resources</h2>
+            <p>For individuals seeking more information on neurology and neurological conditions, there are several resources available:</p>
+            <ul>
+              <li>Books and Publications: Numerous books and publications provide in-depth knowledge about neurology, specific conditions, and treatment approaches.</li>
+              <li>Online Resources: Reputable websites and online platforms offer extensive information, articles, and resources related to neurology and neurological conditions. These resources can provide valuable insights and answers to common questions.</li>
+              <li>Support Groups: Joining support groups or online forums can provide individuals and their families with opportunities to connect, share experiences, and find emotional support.</li>
+              <li>Neurology Clinics and Hospitals: Neurology clinics and hospitals often have dedicated websites with information about their services, specialized neurologists, and patient resources. These resources may include educational materials, brochures, and videos about specific conditions and treatments.</li>
+              <li>Professional Organizations: National and international professional organizations in neurology provide resources, educational materials, and information about the latest advancements in the field.</li>
+            </ul>
+          </section>
+        </main>
+        <footer>
+          <p>&copy; 2023 NursIn</p>
+        </footer>
+      </body>
+      </html>          
