--- a/Footer/CardiacSciences.html
+++ b/Footer/CardiacSciences.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cardiac Sciences Information</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Cardiac Science</h1>
-</body>
-</html>
+  <header>
+    <h1>Cardiac Sciences Information</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#overview">Overview</a></li>
+      <li><a href="#conditions">Common Conditions</a></li>
+      <li><a href="#treatments">Treatments</a></li>
+      <li><a href="#resources">Resources</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section id="overview">
+      <h2>Overview</h2>
+      <p>Cardiac sciences, also known as cardiology, is a medical specialty that focuses on the diagnosis, treatment, and prevention of conditions related to the heart and blood vessels. The heart plays a vital role in circulating oxygenated blood throughout the body, and any abnormalities or diseases affecting the heart can have significant health implications.</p>
+      <p>Cardiologists are specialized physicians who have extensive knowledge and training in the field of cardiology. They are responsible for evaluating patients, diagnosing cardiac conditions, and developing appropriate treatment plans to manage and improve heart health.</p>
+      <p>Cardiology encompasses a wide range of conditions, including coronary artery disease, heart failure, arrhythmias, valvular heart diseases, and congenital heart defects. The field of cardiac sciences continuously evolves with advancements in diagnostic techniques, medical interventions, and surgical procedures aimed at improving patient outcomes.</p>
+    </section>
+
+    <section id="conditions">
+      <h2>Common Conditions</h2>
+      <p>Cardiologists diagnose and treat various cardiac conditions. Some of the most common conditions seen in cardiac sciences include:</p>
+      <ul>
+        <li>Coronary Artery Disease: A condition characterized by the buildup of plaque in the coronary arteries, leading to reduced blood flow to the heart.</li>
+        <li>Heart Failure: A condition in which the heart is unable to pump blood efficiently, leading to fatigue, shortness of breath, and fluid retention.</li>
+        <li>Arrhythmias: Abnormal heart rhythms, including tachycardia (fast heart rate), bradycardia (slow heart rate), and atrial fibrillation.</li>
+        <li>Valvular Heart Diseases: Conditions affecting the heart valves, such as aortic stenosis, mitral regurgitation, or tricuspid valve disorders.</li>
+        <li>Congenital Heart Defects: Structural abnormalities in the heart present from birth, including septal defects, heart valve abnormalities, and complex congenital heart diseases.</li>
+        <li>Cardiomyopathy: Diseases that affect the heart muscle, causing it to become enlarged, thickened, or weakened.</li>
+        <li>Myocardial Infarction (Heart Attack): Occurs when blood flow to the heart muscle is blocked, leading to tissue damage and potential loss of heart function.</li>
+        <li>Peripheral Artery Disease: Narrowing or blockage of arteries outside the heart, commonly affecting the legs and causing pain and reduced circulation.</li>
+      </ul>
+    </section>
+
+    <section id="treatments">
+      <h2>Treatments</h2>
+     
+      <p>The treatment options in cardiac sciences depend on the specific condition, its severity, and the patient's overall health. Cardiologists may recommend various interventions to manage and improve heart health, including:</p>
+      <ul>
+        <li>Lifestyle Modifications: Adopting a heart-healthy lifestyle, including regular exercise, a balanced diet, weight management, smoking cessation, and stress reduction.</li>
+        <li>Medications: Prescribing medications to manage symptoms, control blood pressure, regulate heart rhythm, reduce cholesterol levels, or prevent blood clots.</li>
+        <li>Invasive Procedures: Performing minimally invasive procedures, such as angioplasty and stenting, to open blocked or narrowed blood vessels, or inserting devices like pacemakers or implantable cardioverter-defibrillators (ICDs) to regulate heart rhythm.</li>
+        <li>Cardiac Catheterization and Electrophysiology Studies: Diagnostic procedures that involve inserting catheters into blood vessels or the heart to assess its structure and function, identify abnormalities, and guide treatment decisions.</li>
+        <li>Cardiac Surgery: Performing open-heart surgeries, such as coronary artery bypass grafting (CABG), valve repair or replacement, heart transplantation, or surgical correction of congenital heart defects.</li>
+        <li>Cardiac Rehabilitation: Customized programs that combine exercise, education, and lifestyle counseling to improve heart health and recovery after a cardiac event or surgery.</li>
+      </ul>
+    </section>
+    <section id="resources">
+        <h2>Resources</h2>
+        <p>For individuals seeking more information on cardiac sciences and heart-related conditions, the following resources can provide valuable insights and support:</p>
+        <ul>
+          <li>Books and Publications: Numerous books, research papers, and medical journals cover a wide range of cardiac topics, including specific conditions, treatments, and advancements in the field of cardiology.</li>
+          <li>Websites and Online Resources: Reputable websites, medical organizations, and government health portals provide reliable information, articles, videos, and interactive tools related to cardiac sciences and heart health.</li>
+          <li>Support Groups: Joining support groups or online communities can connect individuals with others facing similar cardiac conditions, providing a platform for sharing experiences, advice, and emotional support.</li>
+          <li>Cardiology Clinics and Hospitals: Cardiology clinics and hospitals often have dedicated websites with information about their services, specialized cardiologists, and patient resources. These resources may include educational materials, brochures, and videos related to heart health and specific conditions.</li>
+          <li>Professional Organizations: National and international professional organizations in cardiology provide resources, guidelines, and updates on the latest research and advancements in cardiac sciences.</li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2023 NursIn</p>
+    </footer>
+  </body>
+  </html>      
