--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       href="Appointment_form/Online_Doctor_Appointment_Form.html">Appointments</a>
         <a href="#">blog</a>
         <a href="#">gallery</a>
-        <a href="#">contact</a>
+        <a href="#contact">contact</a>
     </nav>
 
 
@@ -373,7 +373,7 @@
 
 <!-- our footer -->
 
-<div class="our-footer">
+<div id="contact" class="our-footer">
 
 <div class="main-footer">
     <div class="inner-footer">
