--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a
       href="Appointment_form/Online_Doctor_Appointment_Form.html">Appointments</a>
         <a href="#">blog</a>
-        <a href="#">gallery</a>
+        <a href="#gallery">gallery</a>
         <a href="#contact">contact</a>
     </nav>
 
@@ -274,7 +274,7 @@
 
 
 <!-- our gallery -->
-<div class="our-gallery">
+<div id="gallery" class="our-gallery">
 <h1>our <span>gallery</span></h1>
 
 <div class="main-gallery">
