--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="#">home</a>
         <a
       href="Appointment_form/Online_Doctor_Appointment_Form.html">Appointments</a>
-        <a href="#">blog</a>
+        <a href="#our-services">Services</a>
         <a href="#gallery">gallery</a>
         <a href="#contact">contact</a>
     </nav>
