--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <!-- why chose us -->
 
 
-<div class="why-chose-us">
+<div class="why-chose-us" style="margin-left=50px; margin-right=50px;">
     <h1 style="
     padding-right: 100px;
 ">Top Rated </h1>
