--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!-- our services -->
 
 
-<div id="our-services" class="our-services" style="margin-left=50px; margin-right=50px;">
+<div id="our-services" class="our-services" style="margin-left: 50px; margin-right: 50px;">
     <h1>our <span>services</span></h1>
 
 
@@ -274,7 +274,7 @@
 
 
 <!-- our gallery -->
-<div id="gallery" class="our-gallery" style="margin-left=50px; margin-right=50px;">
+<div id="gallery" class="our-gallery" style="margin-left: 50px; margin-right: 50px;">
 <h1>our <span>gallery</span></h1>
 
 <div class="main-gallery">
