--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <!-- our services -->
 
 
-<div id="our-services" class="our-services" style="margin-left: 50px; margin-right: 50px;">
+<div id="our-services" class="our-services" style="margin-left: 50px; margin-right: 50px; margin-top: 20px;">
     <h1>our <span>services</span></h1>
 
 
