--- a/Footer/Oncology.html
+++ b/Footer/Oncology.html
@@ -1,12 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Oncology Information</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Oncology</h1>
-</body>
-</html>
+  <header>
+    <h1>Oncology Information</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#overview">Overview</a></li>
+      <li><a href="#types">Types of Cancer</a></li>
+      <li><a href="#diagnosis">Diagnosis</a></li>
+      <li><a href="#treatments">Treatments</a></li>
+      <li><a href="#resources">Resources</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section id="overview">
+      <h2>Overview</h2>
+      <p>Oncology is a medical specialty that focuses on the prevention, diagnosis, and treatment of cancer. Cancer is a complex group of diseases characterized by the abnormal growth and spread of cells, which can invade and damage surrounding tissues and organs.</p>
+      <p>Oncologists are healthcare professionals specialized in the field of oncology. They work closely with multidisciplinary teams to provide comprehensive care for individuals with cancer, including cancer diagnosis, staging, treatment planning, and ongoing follow-up.</p>
+      <p>Oncology encompasses various aspects of cancer care, such as medical oncology (chemotherapy, targeted therapies, immunotherapy), radiation oncology (radiation therapy), surgical oncology (surgical interventions), and other supportive care services to help manage the physical and emotional challenges associated with cancer.</p>
+    </section>
+
+    <section id="types">
+      <h2>Types of Cancer</h2>
+      <p>Cancer can occur in different parts of the body, resulting in various types of cancer. Some of the most common types of cancer include:</p>
+      <ul>
+        <li>Breast Cancer</li>
+        <li>Lung Cancer</li>
+        <li>Colorectal (Colon) Cancer</li>
+        <li>Prostate Cancer</li>
+        <li>Bladder Cancer</li>
+        <li>Leukemia</li>
+        <li>Melanoma</li>
+        <li>Lymphoma</li>
+        <li>Pancreatic Cancer</li>
+        <li>Ovarian Cancer</li>
+        <li>Brain Tumors</li>
+      </ul>
+    </section>
+
+    <section id="diagnosis">
+      <h2>Diagnosis</h2>
+      <p>Diagnosing cancer involves a combination of medical evaluations, imaging tests, laboratory analyses, and sometimes, biopsies. Oncologists and other healthcare professionals use these diagnostic tools to determine the type and stage of cancer, which helps guide treatment decisions.</p>
+      <p>Common diagnostic methods in oncology include:</p>
+      <ul>
+        <li>Medical History and Physical Examination</li>
+        <li>Imaging Tests (X-ray, MRI, CT Scan, PET Scan)</li>
+        <li>Biopsy and Pathology</li>
+        <li>Blood Tests and Tumor Markers</li>
+        <li>Genetic Testing</li>
+      </ul>
+    </section>
+
+    <section id="treatments">
+      <h2>Treatments</h2>
+      <p>Treatment options for cancer depend on factors such as the type, stage, and location of the cancer, as well as the patient's overall health. Oncologists develop individualized treatment plans that may include one or more of the following:</p>
+      <ul>
+      <li>Surgery: Surgical procedures to remove cancerous tumors and nearby lymph nodes.</li>
+      <li>Chemotherapy: The use of drugs to kill cancer cells or prevent their growth.</li>
+      <li>Radiation Therapy: High-energy rays or particles to destroy cancer cells or shrink tumors.</li>
+      <li>Immunotherapy: Treatment that boosts the body's immune system to fight cancer cells.</li>
+      <li>Targeted Therapy: Medications that specifically target cancer cells or their unique characteristics.</li>
+      <li>Hormone Therapy: Treatment to block or interfere with hormone activity to stop or slow the growth of certain cancers.</li>
+      <li>Stem Cell Transplantation: Replacement of diseased bone marrow with healthy stem cells to restore normal blood cell production.</li>
+      <li>Palliative Care: Supportive care to relieve symptoms, manage side effects, and improve the quality of life for patients.</li>
+      </ul>
+      </section>
+      <section id="resources">
+        <h2>Resources</h2>
+        <p>For individuals seeking more information on oncology and cancer-related topics, the following resources can provide valuable insights and support:</p>
+        <ul>
+          <li>Books and Publications: Numerous books, research papers, and medical journals cover various aspects of oncology, including cancer types, treatments, and survivorship.</li>
+          <li>Websites and Online Resources: Reputable websites, cancer centers, and patient advocacy organizations offer reliable information, articles, patient stories, and support resources for individuals and their families.</li>
+          <li>Support Groups: Joining cancer support groups or online communities can provide emotional support, connections with fellow cancer patients and survivors, and opportunities to share experiences and advice.</li>
+          <li>Cancer Treatment Centers and Hospitals: Cancer treatment centers and hospitals often have dedicated websites providing information about their services, expert oncologists, and patient resources. These resources may include educational materials, survivorship programs, and counseling services.</li>
+          <li>Research Organizations: National and international cancer research organizations provide updates on ongoing research, clinical trials, and advancements in oncology.</li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2023 NursIn</p>
+    </footer>
+  </body>
+  </html>      
