--- a/index.html
+++ b/index.html
@@ -318,12 +318,16 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
           </ol>
         <div class="carousel-inner slider-inner">
           <div class="carousel-item active slider">
             <div class="row">
               <div class="col-md-6"  style="padding-right: 0px;">
-                <img class="d-block w-100" src="images/1.jpg" alt="First slide">
+                <img class="d-block w-100" src="images/photo-1542644425-bc949ec841a4.avif" alt="First slide">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -336,7 +340,7 @@
           <div class="carousel-item slider">
             <div class="row">
               <div class="col-md-6 img" style="padding-right: 0px;">
-                <img class="d-block w-100" src="images/2.jpg" alt="Second slide">
+                <img class="d-block w-100" src="images/photo-1571367034861-e6729ad9c2d5.avif" alt="Second slide">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
@@ -349,12 +353,64 @@
           <div class="carousel-item slider">
             <div class="row">
               <div class="col-md-6 img" style="padding-right: 0px;">
-                <img class="d-block w-100" src="images/3.jpg" alt="Third slide">
+                <img class="d-block w-100" src="images/photo-1589169011402-8b2cbd1ee593.avif" alt="Third slide">
               </div>
               <div class="col-md-6">
                 <div class="carousel-caption slider-caption">
                   <h5>Third Name</h5>
                   <p>Thanks To This Website I Was Able To Save My Time And Money.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item slider">
+            <div class="row">
+              <div class="col-md-6 img" style="padding-right: 0px;">
+                <img class="d-block w-100" src="images/photo-1595502124338-950db27ea1c7.avif" alt="Fourth slide">
+              </div>
+              <div class="col-md-6">
+                <div class="carousel-caption slider-caption">
+                  <h5>Second Name</h5>
+                  <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item slider">
+            <div class="row">
+              <div class="col-md-6 img" style="padding-right: 0px;">
+                <img class="d-block w-100" src="images/photo-1601317781780-646aabae8a93.avif" alt="Fifth slide">
+              </div>
+              <div class="col-md-6">
+                <div class="carousel-caption slider-caption">
+                  <h5>Second Name</h5>
+                  <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item slider">
+            <div class="row">
+              <div class="col-md-6 img" style="padding-right: 0px;">
+                <img class="d-block w-100" src="images/photo-1607189200597-4d0923ef98c6.avif" alt="Sixth slide">
+              </div>
+              <div class="col-md-6">
+                <div class="carousel-caption slider-caption">
+                  <h5>Second Name</h5>
+                  <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
+                </div>
+              </div>
+            </div>
+          </div> 
+          <div class="carousel-item slider">
+            <div class="row">
+              <div class="col-md-6 img" style="padding-right: 0px;">
+                <img class="d-block w-100" src="images/photo-1620324122918-6e47aa23133c.avif" alt="Seventh slide">
+              </div>
+              <div class="col-md-6">
+                <div class="carousel-caption slider-caption">
+                  <h5>Second Name</h5>
+                  <p>I Was Able To Compare And Get The Doctors Of The Right Field For Me.</p>
                 </div>
               </div>
             </div>
